kubectl-deployments-yaml/kubernetes-cloud-deployments/gcp/ingress-setup/kyle-naveen-deployments/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
spec:
  selector:
    matchLabels:
      app: frontend-app
  replicas: 1
  template:
    metadata:
      labels:
        app: frontend-app
    spec:
      containers:
        - name: frontend-app
          image: us-central1-docker.pkg.dev/ultimate-bit-416621/my-artifact-registry/my-store-web:latest
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  selector:
    app: frontend-app
  ports:
    - port: 80
